--- a/docker_support/docker-compose.yaml
+++ b/docker_support/docker-compose.yaml
@@ -37,4 +37,4 @@ services:
     ports:
       - ${QLIB_SERVER_PORT}:9710
     command: ["./wait-for-it/wait-for-it.sh", rabbitmq:15672, "--", "python", "main.py", "-c", "config_template.yaml"]
-
+    image: fixfire/qlib-server:latest
