--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,5 +22,5 @@ jobs:
         name: Build the stack
         run: |
           docker-compose -f docker_support/docker-compose.yaml --env-file docker_support/docker-compose.env build
-          docker-compose push
+          docker-compose -f docker_support/docker-compose.yaml --env-file docker_support/docker-compose.env push
 
